@@ -23,7 +23,7 @@
  */
 package net.kyori.adventure.text.minimessage;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.function.UnaryOperator;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.ComponentLike;
@@ -79,6 +79,6 @@ public abstract class AbstractTest {
 
   public static Component virtualOfChildren(final ComponentLike... children) {
     return Component.virtual(Void.class, context -> Component.empty()) // not part of equality... should it be?
-      .children(Arrays.asList(children));
+      .children(List.of(children));
   }
 }
